docs: Add hint how to start Spring Boot from inside IntelliJ